--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,20 @@ Package: rwinepredict
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: person("Felix", "Li", , "jane@example.com", role = c("aut", "cre"))
+    person("Gurman", "Gill", , "jane@example.com", role = c("aut", "cre"))
+    person("Dia", "Zavery", , "diazavery6@gmail.com", role = c("aut", "cre"))
+    person("Steve", "He", , "jane@example.com", role = c("aut", "cre"))
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    dplyr,
+    tibble,
+    tidyr
