--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Config/testthat/edition: 3
 Imports: 
     dplyr,
     tibble,
-    tidyr
+    tidyr,
+    ggplot2
 URL: https://github.com/diaazavery/rwinepredict
 BugReports: https://github.com/diaazavery/rwinepredict/issues
